@@ -1,3 +1,7 @@
+2009-06-23  Corinna Vinschen  <corinna@vinschen.de>
+
+	* faq-setup.xml (faq.setup.setup-failes-on-ts): New FAQ entry.
+
 2009-06-19  Corinna Vinschen  <corinna@vinschen.de>
 
 	* new-features.sgml (ov-new1.7-misc): Add new link libs.
